<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_Title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/buff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:id="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@id/app_Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/versionName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.nokopi.colorsample.view.CustomNBButton
                android:id="@+id/nbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.nokopi.colorsample.view.CustomFTNButton
                android:id="@+id/ftnButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.nokopi.colorsample.view.CustomSLBButton
                android:id="@+id/slbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slb" />

            <com.nokopi.colorsample.view.CustomPLButton
                android:id="@+id/plButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pl" />

            <com.nokopi.colorsample.view.CustomPOGOButton
                android:id="@+id/pogoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pogo" />

            <com.nokopi.colorsample.view.CustomAButton
                android:id="@+id/aButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="gotoPrivacyPolicy"
        android:text="@string/privacyPolicy"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"/>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"/>

</androidx.constraintlayout.widget.ConstraintLayout>